Fix Image Squash Below 768px

--- a/public/commerce/css/responsive.css
+++ b/public/commerce/css/responsive.css
@@ -590,4 +590,13 @@
 }
 }
 
+.product-img{
+    min-height:234px
+}
 
+
+@media (max-width: 768px) {
+    .product-img{
+        min-height:100%;
+    }
+}
